Had to make footballer img max-width: 100% to stop overflow of image

--- a/style.css
+++ b/style.css
@@ -8,3 +8,7 @@ html {
     box-sizing: border-box;
     max-width: 500px;
 }
+
+.footballer img {
+    max-width: 100%;
+}
